# repo-vitals

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  LICENSE  README.md  REPORT.md  VITALS.json  action.yml  history.ndjson  index.html  pyproject.toml
badge/: health.json  stars.json  views-week.json
deploy/: rollout.sh  workflow-template.yml
hub-template/: README.md  hub-config.yml
repo_vitals/: __init__.py  __main__.py  cli.py  collect.py  commit.py  derived.py  hub.py  merge.py  render.py  schemas.py
reports/: biterik-repo-vitals-2026-07-07.md  biterik-repo-vitals-2026-07-08.md  biterik-repo-vitals-2026-07-09.md  biterik-repo-vitals-2026-07-10.md  biterik-repo-vitals-2026-07-11.md  biterik-repo-vitals-2026-07-12.md  biterik-repo-vitals-2026-07-13.md  biterik-repo-vitals-2026-07-14.md  biterik-repo-vitals-2026-07-15.md  biterik-repo-vitals-2026-07-16.md  biterik-repo-vitals-2026-07-17.md  biterik-repo-vitals-2026-07-18.md  biterik-repo-vitals-2026-07-19.md  biterik-repo-vitals-2026-07-20.md  biterik-repo-vitals-2026-07-21.md  biterik-repo-vitals-2026-07-22.md  biterik-repo-vitals-2026-07-23.md  biterik-repo-vitals-2026-07-24.md
schema/: vitals.schema.json
snapshots/: 2026-07-06.json  2026-07-07.json  2026-07-08.json  2026-07-09.json  2026-07-10.json  2026-07-11.json  2026-07-12.json  2026-07-13.json  2026-07-14.json  2026-07-15.json  2026-07-16.json  2026-07-17.json  2026-07-18.json  2026-07-19.json  2026-07-20.json  2026-07-21.json  2026-07-22.json  2026-07-23.json  2026-07-24.json
tests/: conftest.py  make_dashboard_fixture.py  test_collect.py  (+6 more)
(+15 files in other folders)
