[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-vitals"
version = "0.1.0"
description = "Long-term GitHub repository statistics collected daily by a GitHub Action"
readme = "README.md"
license = "BSD-3-Clause"
authors = [{ name = "Erik Bitzek", email = "e.bitzek@mpi-susmat.de" }]
requires-python = ">=3.11"
dependencies = [
    "requests==2.32.5",
    "jinja2==3.1.6",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "ruff==0.12.1",
    "jsonschema==4.24.0",
]

[project.urls]
Homepage = "https://github.com/biterik/repo-vitals"

[tool.setuptools]
packages = ["repo_vitals"]

[tool.setuptools.package-data]
repo_vitals = ["templates/*.j2", "templates/*.html"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
